@@ -23,7 +23,7 @@
 #define HAVE_DCGETTEXT 1
 
 /* Define to 1 to use GConf to store preferences */
-#define HAVE_GCONF 1
+/* #undef HAVE_GCONF */
 
 /* Define if the GNU gettext() function is already present or preinstalled. */
 #define HAVE_GETTEXT 1
